@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-05T16:25:48Z",
-  "count_outdated" : 1133,
-  "uniques_outdated" : 292,
-  "count" : 1723,
-  "uniques" : 314,
+  "timestamp" : "2022-04-06T01:20:11Z",
+  "count_outdated" : 1154,
+  "uniques_outdated" : 300,
+  "count" : 1742,
+  "uniques" : 321,
   "clones" : [
-    {
-      "timestamp": "2022-03-22T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 0, 21 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 8 ]
-    },
     {
       "timestamp": "2022-03-23T00:00:00Z",
       "count": 2,
