@@ -1,3 +1,9 @@
+2022-04-06T01:20:11Z:
+* notice: last 14d: all unq: 588 15
+* notice: prev accum: outdated-all outdated-unq / all unq: 1133 292 / 1723 314
+* notice: next accum: outdated-all outdated-unq / all unq: 1154 300 / 1742 321
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -0 // +0 +0 / -0 -0
+
 2022-04-05T16:25:48Z:
 * notice: last 14d: all unq: 590 15
 * notice: prev accum: outdated-all outdated-unq / all unq: 1133 292 / 1722 313
